--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-loader-spinner": "^4.0.0",
     "react-pdf": "^5.4.0",
     "react-rating": "^2.0.5",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.18.2"
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.11.1"
   }
 }
